# create-flask-app

./: .gitignore  README.md  pyproject.toml  需求文档.md
create_flask_app/: __init__.py  cli.py  generator.py  utils.py
create_flask_app/templates/: .env.j2  .gitignore.j2  Dockerfile.j2  README.md.j2  docker-compose.yml.j2  wsgi.py.j2
create_flask_app/templates/app/: __init__.py.j2  api.py.j2  auth.py.j2  routes.py.j2
create_flask_app/templates/app/models/: user.py.j2
create_flask_app/templates/app/static/css/: style.css.j2
create_flask_app/templates/app/static/js/: main.js.j2
create_flask_app/templates/app/templates/: base.html.j2  dashboard.html.j2  index.html.j2
create_flask_app/templates/app/templates/auth/: login.html.j2  register.html.j2
create_flask_app/templates/config/: __init__.py.j2  development.py.j2  production.py.j2  testing.py.j2
create_flask_app/templates/requirements/: base.txt.j2  dev.txt.j2
create_flask_app/templates/tests/: conftest.py.j2  test_basic.py.j2
